Buttons for categories up

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <!-- MOUNTING POINT -->
   <div id="app">
-    <div class="categories">
-      categories go here
+    <div id="categories" class="categories">
+      <button onclick="">Button</button>
     </div>
 
     <div class="active-category">
